--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>nyc.ol.FinderApp with nyc.Directions Example</title>
+  <title>NYC Sandy Funding Tracker</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.3.15/proj4.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/4.6.5/ol.js"></script>
+  <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.1.3/build/ol.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.4.0/papaparse.min.js"></script>
-  <script src="https://maps.nyc.gov/nyc-lib/v1.1.59/js/babel-polyfill.js"></script>
-  <script src="https://maps.nyc.gov/nyc-lib/v1.1.59/js/nyc-ol-lib.js"></script>
-  <link href="https://maps.nyc.gov/nyc-lib/v1.1.59/css/nyc-ol-lib.css" rel="stylesheet">
+  <script src="https://maps.nyc.gov/nyc-lib/v1.1.66/js/babel-polyfill.js"></script>
+  <script src="https://maps.nyc.gov/nyc-lib/v1.1.66/js/nyc-ol-lib.js"></script>
+  <link href="https://maps.nyc.gov/nyc-lib/v1.1.66/css/nyc-ol-lib.css" rel="stylesheet">
   <link href="css/sft.css" rel="stylesheet">
 </head>
 <body class="loading">
